# arc-client-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_example.py  buffered_writes.py  dataframe_integration.py  quickstart.py  retention_and_cq.py
src/arc_client/: __init__.py  async_client.py  client.py  config.py  exceptions.py
src/arc_client/auth/: __init__.py  async_manager.py  manager.py
src/arc_client/dataframe/: __init__.py
src/arc_client/http/: __init__.py  async_http.py  base.py  sync_http.py
src/arc_client/ingestion/: __init__.py  async_buffered.py  async_writer.py  buffered.py  compression.py  line_protocol.py  msgpack.py  writer.py
src/arc_client/management/: __init__.py  async_continuous_query.py  async_delete.py  async_retention.py  continuous_query.py  delete.py  retention.py
src/arc_client/models/: __init__.py  auth.py  common.py  continuous_query.py  delete.py  query.py  retention.py
src/arc_client/query/: __init__.py  async_executor.py  executor.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_auth.py  test_client.py  test_compression.py  test_exceptions.py  test_line_protocol.py  test_management.py  test_msgpack.py  test_query.py
