[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "arc-tsdb-client"
version = "0.1.2"
description = "Python SDK for Arc time-series database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Basekick Labs", email = "dev@basekick.io" }]
keywords = ["arc", "time-series", "database", "duckdb", "arrow", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "msgpack>=1.0.7",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/basekick-labs/arc-client-python"
Documentation = "https://docs.basekick.net/arc/python-sdk"
Repository = "https://github.com/basekick-labs/arc-client-python"
Issues = "https://github.com/basekick-labs/arc-client-python/issues"

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=0.20.0"]
all = ["pandas>=2.0.0", "polars>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/arc_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "UP006",  # Use `list` instead of `List` - not available in py39 without __future__.annotations
    "UP007",  # Use `X | Y` for type unions - requires Python 3.10+
    "UP035",  # `typing.List` is deprecated - still needed for py39 compatibility
    "UP045",  # Use `X | None` for type annotations - requires Python 3.10+
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=arc_client --cov-report=term-missing"
